review-guide.md: ページ数の補足・図を横断枠から外す・JVM オプションの文面（#86、模擬レビュー 1 周目のガイド指摘）